# qqbot-rust-sdk

./: Cargo.toml
qqbot_sdk_core/: Cargo.toml
qqbot_sdk_core/src/: dependency.rs  event_handler.rs  event_registry_key.rs  lib.rs  signature.rs
qqbot_sdk_core/src/events/: audio.rs  common.rs  event.rs  event_type.rs  forum.rs  group.rs  guild.rs  interaction.rs  member.rs  message_reaction.rs  messages.rs  mod.rs  opcode.rs  payload.rs  reaction.rs  user.rs  validation.rs
qqbot_sdk_core/src/events/c2c/: event_type.rs  models.rs
qqbot_sdk_core/src/events/group/: event_type.rs  models.rs
qqbot_sdk_core/src/events/guild/: audio.rs  event_type.rs  forum.rs  guild.rs  member.rs  messages.rs  open_forum.rs
qqbot_sdk_core/src/events/interaction/: event_type.rs  models.rs
qqbot_sdk_core/src/events/message_reaction/: event_type.rs
qqbot_sdk_core/src/openapi/: client.rs  config.rs  error.rs  http.rs  mod.rs  token.rs  utils.rs
qqbot_sdk_core/src/openapi/apis/: announces.rs  api_permissions.rs  c2c_messages.rs  channel_permissions.rs  channels.rs  forums.rs  group_messages.rs  guilds.rs  interactions.rs  members.rs  message_settings.rs  mod.rs  mute.rs  open_api.rs  pins.rs  reactions.rs  roles.rs  schedules.rs  users.rs
qqbot_sdk_core/src/openapi/apis/channel/: audio.rs  channel_permissions.rs  channels.rs  forums.rs  messages.rs  mod.rs  pins.rs  reactions.rs  schedules.rs
qqbot_sdk_core/src/openapi/apis/guild/: announces.rs  api_permissions.rs  guilds.rs  members.rs  message_settings.rs  mod.rs  mute.rs  roles.rs
qqbot_sdk_core/src/openapi/apis/interaction/: interactions.rs  mod.rs
qqbot_sdk_core/src/openapi/apis/message/: c2c_messages.rs  dms_messages.rs  group_messages.rs  media.rs  mod.rs
qqbot_sdk_core/src/openapi/apis/user/: mod.rs  users.rs
qqbot_sdk_core/src/openapi/models/: channel.rs  common.rs  guild.rs  interaction.rs  message.rs  mod.rs  user.rs
qqbot_sdk_core/tests/: signature.rs
qqbot_sdk_core_macros/: Cargo.toml
qqbot_sdk_core_macros/src/: command.rs  context_injection.rs  lib.rs
